# SnapClip

./: .eslintrc.cjs  .gitignore  App.tsx  README.md  app.json  index.html  jest-setup.js  overlay.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
android/: settings.gradle
android/app/: build.gradle
ios/: Podfile
ios/SnapClip/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/SnapClip.xcodeproj/: project.pbxproj
ios/SnapClip.xcodeproj/xcshareddata/xcschemes/: SnapClip.xcscheme
ios/SnapClipTests/: SnapClipTests.m
src/: App.tsx  main.tsx  nativeModules.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  input.rs  lib.rs  main.rs  ocr.rs
src/components/: ActionButton.tsx  History.tsx  Overlay.tsx  SettingsPanel.tsx  StatusBadge.tsx
src/lib/: selection.ts  tauri.ts
src/lib/__tests__/: selection.test.ts
src/store/: useSettingsStore.ts  useSnapClipStore.ts
src/store/__tests__/: useSettingsStore.test.ts  useSnapClipStore.test.ts
src/theme/: colors.ts  useTheme.ts
windows/: SnapClip.sln
windows/SnapClip/: App.cpp  App.h  App.idl  App.xaml  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  Package.appxmanifest  ReactPackageProvider.cpp  ReactPackageProvider.h  SnapClip.vcxproj
windows/SnapClipNative/: ClipboardModule.cs  InputHookModule.cs  OcrModule.cs  OcrResultSerializer.cs  OverlayWindowModule.cs  ReactPackageProvider.cs  SnapClipNative.csproj  SnapClipNative.dll.csproj  WindowCapture.cs
(+3 files in other folders)
